# cincv-exp-merge-j6t

./: configure.ac  configure.in
plugins/: Makefile.am  flatten.bash
plugins/1080to540/: 1080to540.C  1080to540.h  Makefile.am
plugins/720to480/: 720to480.C  720to480.h
plugins/C41/: Makefile.am  c41.C
plugins/aging/: Makefile.am  aging.C  agingwindow.C  agingwindow.h
plugins/bandslide/: Makefile.am  bandslide.C  bandslide.h
plugins/bandwipe/: Makefile.am  bandwipe.C  bandwipe.h
plugins/bluebanana/: Makefile.am  bluebanana.C  bluebanana.h  bluebananaslider.C  bluebananaslider.h  bluebananawindow.C  bluebananawindow.h
plugins/bluedottheme/: bluedottheme.C
plugins/blur/: Makefile.am  blur.C  blur.h  blurwindow.C  blurwindow.h
plugins/blurzoom/: Makefile.am  blurzoom.C  blurzoomwindow.C  blurzoomwindow.h
plugins/brightness/: Makefile.am  brightness.C  brightness.h  brightnesswindow.C  brightnesswindow.h
plugins/burn/: Makefile.am  burn.C  burn.h  burnwindow.C  burnwindow.h  effecttv.C
plugins/cdripper/: cdripper.C  cdripwindow.C  cdripwindow.h
plugins/chromakey/: Makefile.am  chromakey.C  chromakey.h
plugins/chromakeyhsv/: Makefile.am  chromakey.C  chromakey.h
plugins/color3way/: Makefile.am  color3way.C  color3way.h  color3waywindow.C  color3waywindow.h
plugins/colorbalance/: Makefile.am  colorbalance.C  colorbalance.h  colorbalancewindow.C  colorbalancewindow.h
plugins/colors/: colorpicker.C
plugins/compressor/: Makefile.am  compressor.C  compressor.h
plugins/crossfade/: Makefile.am
plugins/dcoffset/: Makefile.am
plugins/decimate/: Makefile.am  decimate.C
plugins/defaulttheme/: defaulttheme.C  defaulttheme.h
plugins/deinterlace/: Makefile.am  deinterlace.C  deinterlace.h  deinterwindow.C  deinterwindow.h
plugins/delayaudio/: Makefile.am  delayaudio.C  delayaudio.h
plugins/delayvideo/: Makefile.am  delayvideo.C  delayvideo.h
plugins/denoise/: Makefile.am  denoise.C  denoise.h
plugins/denoisefft/: Makefile.am  denoisefft.C
plugins/denoisemjpeg/: denoisemjpeg.C  denoisemjpeg.h
plugins/denoiseseltempavg/: Makefile.am  seltempavg.C  seltempavg.h  seltempavgwindow.C  seltempavgwindow.h
plugins/denoisevideo/: Makefile.am  denoisevideo.C  denoisevideo.h
plugins/despike/: Makefile.am  despike.C  despikewindow.C  despikewindow.h
plugins/diffkey/: Makefile.am  diffkey.C
plugins/dissolve/: Makefile.am
plugins/dot/: Makefile.am  dot.C  dotwindow.C  dotwindow.h
plugins/downsample/: Makefile.am  downsample.C
plugins/fieldframe/: Makefile.am  fieldframe.C
plugins/findobject/: findobject.C  findobject.h  findobjectwindow.C  findobjectwindow.h
plugins/flash/: Makefile.am
plugins/flip/: Makefile.am  flip.C  flipwindow.C  flipwindow.h
plugins/framefield/: Makefile.am  framefield.C
plugins/freeverb/: Makefile.am  freeverb.C
plugins/freezeframe/: Makefile.am  freezeframe.C  freezeframe.h
plugins/gain/: Makefile.am  gain.C  gainwindow.C  gainwindow.h
plugins/gamma/: Makefile.am  aggregated.h  gamma.C  gamma.h  gammawindow.C  gammawindow.h
plugins/gradient/: Makefile.am  gradient.C  gradient.h
plugins/graphic/: Makefile.am  graphic.h
plugins/greycstoration/: Makefile.am  greycstorationplugin.C  greycstorationplugin.h  greycstorationwindow.C  greycstorationwindow.h
plugins/histogram/: Makefile.am  histogram.C  histogram.h  histogramwindow.C  histogramwindow.h
plugins/holo/: Makefile.am  holo.C  holo.h  holowindow.C  holowindow.h
plugins/huesaturation/: Makefile.am  huesaturation.C
plugins/interpolate/: interpolate.C  interpolate.h
plugins/interpolateaudio/: Makefile.am
plugins/interpolatevideo/: Makefile.am  interpolatevideo.C
plugins/invertaudio/: Makefile.am
plugins/invertvideo/: Makefile.am  invert.C  invertwindow.C
plugins/irissquare/: Makefile.am  irissquare.C  irissquare.h
plugins/ivtc/: Makefile.am  ivtc.C  ivtcwindow.C  ivtcwindow.h
plugins/lens/: Makefile.am  lens.C  lens.h
plugins/level/: Makefile.am  leveleffect.C  leveleffect.h
plugins/linearblur/: Makefile.am  linearblur.C
plugins/liveaudio/: Makefile.am  liveaudio.C
plugins/livevideo/: Makefile.am  livevideo.C
plugins/loopaudio/: Makefile.am  loopaudio.C
plugins/loopvideo/: Makefile.am  loopvideo.C
plugins/motion/: Makefile.am  affine.C  motion.C  motion.h  motionscan.C  motionscan.h  motionwindow.C  motionwindow.h
plugins/motionblur/: Makefile.am  motionblur.C
plugins/normalize/: Makefile.am  normalize.C  normalizewindow.C  normalizewindow.h
plugins/oilpainting/: Makefile.am  oil.C  oilwindow.C
plugins/overlay/: Makefile.am  overlay.C
plugins/overlayaudio/: Makefile.am  overlayaudio.C
plugins/parametric/: Makefile.am  fourier.C  fourier.h  parametric.C  parametric.h
plugins/perspective/: Makefile.am  perspective.C  perspective.h
plugins/pitch/: Makefile.am  pitch.C  pitch.h
plugins/polar/: Makefile.am  polar.C  polarwindow.C
plugins/quark/: Makefile.am  quark.C  quark.h  quarkwindow.C  quarkwindow.h
plugins/radialblur/: Makefile.am  radialblur.C
plugins/reframe/: Makefile.am  reframe.C  reframe.h
plugins/reframert/: Makefile.am  reframert.C
plugins/reroute/: Makefile.am  reroute.C
plugins/resample/: Makefile.am  resample.C  resample.h
plugins/reverb/: Makefile.am  reverb.C  reverb.h  reverbwindow.C  reverbwindow.h
plugins/reverseaudio/: Makefile.am  reverseaudio.C
plugins/reversevideo/: Makefile.am  reversevideo.C
plugins/rgb601/: Makefile.am  rgb601.C  rgb601window.C  rgb601window.h
plugins/rotate/: Makefile.am  rotate.C
plugins/scale/: Makefile.am  scale.C  scale.h  scalewin.C
plugins/shapewipe/: Makefile.am  shapewipe.C  shapewipe.h
plugins/sharpen/: Makefile.am  sharpen.C  sharpenwindow.C  sharpenwindow.h
plugins/shiftinterlace/: Makefile.am  shiftinterlace.C
plugins/slide/: Makefile.am  slide.C  slide.h
plugins/spectrogram/: Makefile.am  spectrogram.C  spectrogram.h
plugins/suv/: suv.C
plugins/svg/: Makefile.am  svg.C  svg.h  svgwin.C  svgwin.h
plugins/swapchannels/: Makefile.am  swapchannels.C  swapchannels.h
plugins/swapframes/: Makefile.am  (+1 more)
(+448 files in other folders)
