THEMES= \
	suv \
	bluedottheme \
	defaulttheme

if ENABLE_FINDOBJECT
MAYBE_FINDOBJECT = \
	findobject 
endif

# burn must come before any other effecttv plugin
# colors must come before any plugin
# parametric must come before fourier plugins
# motion must come before perspective

SUBDIRS= \
	$(THEMES) \
	colors \
	1080to540 \
	720to480 \
	C41 \
	bandslide \
	bandwipe \
	blur \
	bluebanana \
	brightness \
	burn \
	parametric \
	aging \
	cdripper \
	chromakey \
	chromakeyhsv \
	colorbalance \
	color3way \
	compressor \
	crossfade \
	dcoffset \
	decimate \
	deinterlace \
	delayaudio \
	delayvideo \
	denoise \
	denoisefft \
	denoisemjpeg \
	denoiseseltempavg \
	denoisevideo \
	despike \
	diffkey \
	dissolve \
	dot \
	downsample \
	fieldframe \
	flash \
	flip \
	framefield \
	freeverb \
	freezeframe \
	gain \
	gamma \
	gradient \
	greycstoration \
	histogram \
	holo \
	huesaturation \
	interpolate \
	interpolateaudio \
	interpolatevideo \
	invertaudio \
	invertvideo \
	irissquare \
	ivtc \
	lens \
	level \
	linearblur \
	liveaudio \
	livevideo \
	loopaudio \
	loopvideo \
	motion \
	motionblur \
	normalize \
	oilpainting \
	overlay \
	overlayaudio \
	perspective \
	pitch \
	polar \
	radialblur \
	reframe \
	reframert \
	reroute \
	resample \
	reverb \
	reverseaudio \
	reversevideo \
	rgb601 \
	rotate \
	scale \
	shapewipe \
	sharpen \
	shiftinterlace \
	slide \
	spectrogram \
	svg \
	swapchannels \
	synthesizer \
	threshold \
	timeavg \
	timefront \
	timestretch \
	titler \
	translate \
	unsharp \
	videoscope \
	wave \
	whirl \
	wipe \
	yuv \
	zoom \
	zoomblur \
	$(MAYBE_FINDOBJECT)

AUTOMAKE_OPTIONS=foreign

EXTRA_DIST = 
